--- a/ansible/roles/gnome/vars/main.yml
+++ b/ansible/roles/gnome/vars/main.yml
@@ -13,7 +13,13 @@ org_gnome_dconf:
   "/org/gnome/desktop/interface/clock-show-weekday": "false"
   "/org/gnome/desktop/interface/color-scheme": "'default'"
   "/org/gnome/desktop/interface/font-antialiasing": "'grayscale'"
+  "/org/gnome/desktop/interface/document-font-name": "'Roboto 11'"
   "/org/gnome/desktop/interface/font-hinting": "'slight'"
+  "/org/gnome/desktop/interface/font-name": "'Roboto 11'"
+  "/org/gnome/desktop/interface/gtk-theme": "'Adwaita'"
+  "/org/gnome/desktop/interface/icon-theme": "'Tela'"
+  "/org/gnome/desktop/interface/locate-pointer": "false"
+  "/org/gnome/desktop/interface/monospace-font-name": "'RobotoMono Nerd Font Propo 10'"
   "/org/gnome/desktop/interface/show-battery-percentage": "false"
   "/org/gnome/desktop/interface/text-scaling-factor": "1.25"
   "/org/gnome/desktop/interface/toolkit-accessibility": "false"
