feat(gnome): Add materialshell dconf values

--- a/ansible/roles/gnome/vars/main.yml
+++ b/ansible/roles/gnome/vars/main.yml
@@ -78,6 +78,33 @@ org_gnome_dconf:
   "/org/gnome/shell/weather/automatic-location": "true"
   "/org/gnome/shell/weather/locations": "[<(uint32 2, <('Göteborg', 'ESGP', true, [(1.0085094136262927, 0.2074032869608953)], [(1.007345872427158, 0.20885773963975227)])>)>]"
 
+  "/org/gnome/shell/extensions/materialshell/bindings/kill-focused-window": "['<Shift><Alt>q']"
+  "/org/gnome/shell/extensions/materialshell/layouts/default-layout": "'ratio'"
+  "/org/gnome/shell/extensions/materialshell/layouts/float": "false"
+  "/org/gnome/shell/extensions/materialshell/layouts/gap": "8"
+  "/org/gnome/shell/extensions/materialshell/layouts/grid": "false"
+  "/org/gnome/shell/extensions/materialshell/layouts/half": "false"
+  "/org/gnome/shell/extensions/materialshell/layouts/half-horizontal": "false"
+  "/org/gnome/shell/extensions/materialshell/layouts/half-vertical": "false"
+  "/org/gnome/shell/extensions/materialshell/layouts/ratio": "true"
+  "/org/gnome/shell/extensions/materialshell/layouts/screen-gap": "0"
+  "/org/gnome/shell/extensions/materialshell/layouts/simple": "false"
+  "/org/gnome/shell/extensions/materialshell/layouts/split": "false"
+  "/org/gnome/shell/extensions/materialshell/layouts/tween-time": "0.20000000000000001"
+  "/org/gnome/shell/extensions/materialshell/layouts/use-screen-gap": "false"
+  "/org/gnome/shell/extensions/materialshell/theme/blur-background": "false"
+  "/org/gnome/shell/extensions/materialshell/theme/clock-app-launcher": "true"
+  "/org/gnome/shell/extensions/materialshell/theme/clock-horizontal": "false"
+  "/org/gnome/shell/extensions/materialshell/theme/focus-effect": "'none'"
+  "/org/gnome/shell/extensions/materialshell/theme/horizontal-panel-position": "'top'"
+  "/org/gnome/shell/extensions/materialshell/theme/panel-icon-color": "false"
+  "/org/gnome/shell/extensions/materialshell/theme/panel-icon-style": "'hybrid'"
+  "/org/gnome/shell/extensions/materialshell/theme/panel-size": "70"
+  "/org/gnome/shell/extensions/materialshell/theme/primary-color": "'#1c71d8'"
+  "/org/gnome/shell/extensions/materialshell/theme/surface-opacity": "50"
+  "/org/gnome/shell/extensions/materialshell/theme/taskbar-item-style": "'name'"
+  "/org/gnome/shell/extensions/materialshell/theme/theme": "'light'"
+
   "/org/gnome/desktop/app-folders/folder-children": "['Utilities', '42ad3479-54d7-45b1-a3ef-4f62466e4b7e', 'bd2e0f00-08eb-40ed-bd57-6ababe362543', '0c691547-2560-4beb-8c2e-406a4c72026a', '6ebe2655-201a-45b0-8a5e-4323ca3fe92c', '6ec53523-91bd-496a-ae1c-dee04761af52', 'bee5124e-ec30-4b6f-af50-bc4055047763', '976fb2be-cf8c-4fef-b6d4-fa4ead81048f', 'bd25cccf-d6a0-4bed-a7b5-d12fade78753', 'b3816476-f81f-4e7c-8a93-33ee53432e46']"
   "/org/gnome/desktop/app-folders/folders/0c691547-2560-4beb-8c2e-406a4c72026a/apps": "['org.gnome.Music.desktop', 'vlc.desktop', 'org.kde.digikam.desktop', 'org.gnome.Cheese.desktop', 'org.gnome.eog.desktop', 'org.gnome.Evince.desktop']"
   "/org/gnome/desktop/app-folders/folders/0c691547-2560-4beb-8c2e-406a4c72026a/name": "'Multimedia'"
