--- a/ansible/roles/yubikey/tasks/main.yml
+++ b/ansible/roles/yubikey/tasks/main.yml
@@ -1,10 +1,11 @@
 ---
-- name: Install YubiKey Personalization GUI
+- name: Install YubiKey - related packages
   become: yes
   community.general.pacman:
     pkg:
       - yubikey-personalization-gui
       - yubikey-manager
+      - libfido2 # dependency
 
 - name: Install smartcard libs/tools
   become: yes
