fix: only enable gdm.service

--- a/ansible/roles/gnome/tasks/main.yml
+++ b/ansible/roles/gnome/tasks/main.yml
@@ -21,11 +21,10 @@
       - gnome-terminal
     state: absent
 
-- name: Start/Enable gdm.service
+- name: Enable gdm.service
   become: true
   ansible.builtin.systemd:
     name: gdm.service
-    state: started
     enabled: yes
 
 - name: "Write dconf values for /org/gnome/"
