refactor(configure_system): adding tags to roles

--- a/ansible/configure_system.yml
+++ b/ansible/configure_system.yml
@@ -6,8 +6,8 @@
       prompt: "luks password"
       private: yes
   roles:
-    - time
-    - users
+    - { role: time, tags: "time" }
+    - { role: users, tags: "users" }
     - { role: l10n, tags: "l10n" }
     - { role: reflector, tags: "reflector" }
     - { role: ssd, tags: "ssd" }
