feat: add systemd-boot config (again)

--- a/ansible/configure_system.yml
+++ b/ansible/configure_system.yml
@@ -16,6 +16,7 @@
     - { role: firewall, tags: "firewall" }
     - { role: bluetooth, tags: "bluetooth" }
     - { role: yubikey, tags: "yubikey" }
+    - { role: systemd-boot, tags: "systemd-boot" }
     - { role: kernel, tags: "kernel" }
   handlers:
     - name: "regenerate initramfs"
