delete(auto-login-user)
Issues:
- Needed to enter password to unlock the keyring anyway.
- Also logged in user when not intended, e.g. after "logout"

--- a/ansible/configure_user.yml
+++ b/ansible/configure_user.yml
@@ -1,6 +1,6 @@
 ---
 - name: Customise a basic arch linux installation
-  hosts: localhost
+  hosts: inventory.yml
   vars_prompt:
     - name: user_email
       prompt: "Your email address"
