update(dev-tools): use vscodium-bin instead of vscodium

--- a/ansible/roles/dev-tools/tasks/main.yml
+++ b/ansible/roles/dev-tools/tasks/main.yml
@@ -31,7 +31,7 @@
 - name: "Install IDEs"
   kewlfft.aur.aur:
     name:
-      - vscodium
+      - vscodium-bin
       - intellij-idea-ultimate-edition
   become: yes
   become_user: aur_builder
