fix(configure_user): declare wireplumber in group_vars

--- a/ansible/group_vars/all/main.yml
+++ b/ansible/group_vars/all/main.yml
@@ -52,6 +52,7 @@ packages:
     - sof-firmware
     - pipewire
     - pipewire-pulse
+    - wireplumber # declared here to avoid installing pipewire-media-session
     - youtube-dl
     - task # taskwarrior
   headless:
