fix(configure_user): correct hosts

--- a/ansible/configure_user.yml
+++ b/ansible/configure_user.yml
@@ -1,6 +1,6 @@
 ---
 - name: Customise a basic arch linux installation
-  hosts: inventory.yml
+  hosts: localhost
   vars_prompt:
     - name: user_email
       prompt: "Your email address"
