Use role geerlingguy.swap

--- a/ansible/roles/hibernation/tasks/main.yml
+++ b/ansible/roles/hibernation/tasks/main.yml
@@ -1,19 +1,13 @@
 ---
-- name: "Create btrfs subvolume {{ swapfile.path }}"
-  become: yes
-  ansible.builtin.command: btrfs filesystem mkswapfile --size "{{ swapfile.size}}" --uuid clear "{{ swapfile.path }}"
-  args:
-    creates: "{{ swapfile.path }}"
-
-- name: Activate the swap file
-  become: yes
-  ansible.builtin.command: swapon "{{ swapfile.path }}"
-
-- name: Add entry to /etc/fstab
-  become: yes
-  ansible.builtin.lineinfile:
-    path: /etc/fstab
-    line: "{{ swapfile.path }} none swap defaults 0.0"
+- name: Setup swap file
+  ansible.builtin.include_role:
+    name: geerlingguy.swap
+  vars:
+    swap_file_path: "{{ swapfile.path }}"
+    swap_file_size_mb: "{{ swapfile.size }}"
+    swap_swappiness: "5"
+    swap_file_state: present
+    swap_file_create_command: "btrfs filesystem mkswapfile --size {{ swap_file_path }} --uuid clear {{ swap_file_path }}"
 
 - name: Register swap_file_offset
   become: yes
@@ -27,7 +21,16 @@
   changed_when: false
   register: swap_file_uuid
 
-- name: Add resume parameter to /etc/mkinitcpio.conf
+- name: Update bootloader entry
+  #TODO: improve.
+  become: yes
+  ansible.builtin.lineinfile:
+    path: /boot/loader/entries/arch.conf
+    regexp: '^options (.*?)(resume=UUID={{ swap_file_uuid.stdout }}\s+resume_offset={{ swap_file_offset.stdout }})?$'
+    line: 'options \1 resume=UUID={{ swap_file_uuid.stdout }} resume_offset={{ swap_file_offset.stdout }}'
+    backrefs: yes
+
+- name: Add resume hook to /etc/mkinitcpio.conf before fsck
   become: yes
   ansible.builtin.lineinfile:
     path: /etc/mkinitcpio.conf
@@ -37,11 +40,8 @@
   notify:
     - "regenerate initramfs"
 
-- name: Update bootloader entry
-  #TODO: improve. Do not drop everything after resume=.
+- name: Minimize hibernation image size
   become: yes
-  ansible.builtin.lineinfile:
-    path: /boot/loader/entries/arch.conf
-    regexp: '^options\s+(.*?)(resume=UUID={{ swap_file_uuid }} resume_offset={{ swap_file_offset }})$'
-    line: 'options=\1 resume=UUID={{ swap_file_uuid }} resume_offset={{ swap_file_offset }}'
-    backrefs: yes
+  ansible.builtin.copy:
+    dest: /etc/tmpfiles.d/hibernation_image_size.conf
+    src: hibernation_image_size.conf
