--- a/ansible/roles/facts/tasks/device_uuids.yml
+++ b/ansible/roles/facts/tasks/device_uuids.yml
@@ -11,6 +11,6 @@
   become: yes
   set_fact:
     luks_device_uuid: "{{ ansible_device_links.uuids[item.key] | first}}"
-  with_dict: "{{ ansible_device_links.labels }}"
+  loop: "{{ ansible_device_links.labels | dict2items}}"
   when: partitions.luks.label in item.value
   changed_when: false
