--- a/ansible/roles/facts/tasks/main.yml
+++ b/ansible/roles/facts/tasks/main.yml
@@ -5,5 +5,6 @@
   set_fact:
     has_intel_cpu: "{{ 'GenuineIntel' in ansible_processor }}"
 
-- debug:
-    msg: "{{ has_intel_cpu }}"
+- name: Set fact intel_cpu_gen
+  set_fact:
+    intel_cpu_gen: "{{ ansible_processor | unique | select('match', '^\\d+(st|nd|rd|th)?\\s+Gen\\s+Intel.*') | first | regex_replace('^(\\d+).*$', '\\1') }}"
