--- a/ansible/roles/hibernation/tasks/main.yml
+++ b/ansible/roles/hibernation/tasks/main.yml
@@ -1,13 +1,15 @@
 ---
-- name: "Create btrfs subvolume {{ swapfile.path }}"
+- name: "Ensure btrfs subvolume {{ swapfile.path }} exists"
   become: yes
-  ansible.builtin.command: btrfs filesystem mkswapfile --size "{{ swapfile.size}}" --uuid clear "{{ swapfile.path }}"
+  ansible.builtin.command: btrfs filesystem mkswapfile --size {{ swapfile.size}} --uuid clear {{ swapfile.path }}
   args:
     creates: "{{ swapfile.path }}"
+  register: swap_file_create
 
 - name: Activate the swap file
   become: yes
-  ansible.builtin.command: swapon "{{ swapfile.path }}"
+  ansible.builtin.command: swapon {{ swapfile.path }}
+  when: swap_file_create is changed
 
 - name: Add entry to /etc/fstab
   become: yes
@@ -17,13 +19,13 @@
 
 - name: Register swap_file_offset
   become: yes
-  ansible.builtin.command: btrfs inspect-internal map-swapfile -r "{{ swapfile.path }}"
+  ansible.builtin.command: btrfs inspect-internal map-swapfile -r {{ swapfile.path }}
   changed_when: false
   register: swap_file_offset
 
 - name: Register swap_file_uuid
   become: yes
-  ansible.builtin.command: findmnt -no UUID -T "{{ swapfile.path }}"
+  ansible.builtin.command: findmnt -no UUID -T {{ swapfile.path }}
   changed_when: false
   register: swap_file_uuid
 
@@ -38,10 +40,16 @@
     - "regenerate initramfs"
 
 - name: Update bootloader entry
-  #TODO: improve. Do not drop everything after resume=.
+  #TODO: improve.
   become: yes
   ansible.builtin.lineinfile:
     path: /boot/loader/entries/arch.conf
-    regexp: '^options\s+(.*?)(resume=UUID={{ swap_file_uuid }} resume_offset={{ swap_file_offset }})$'
-    line: 'options=\1 resume=UUID={{ swap_file_uuid }} resume_offset={{ swap_file_offset }}'
+    regexp: '^options (.*?)(resume=UUID={{ swap_file_uuid.stdout }}\s+resume_offset={{ swap_file_offset.stdout }})?$'
+    line: 'options \1 resume=UUID={{ swap_file_uuid.stdout }} resume_offset={{ swap_file_offset.stdout }}'
     backrefs: yes
+
+- name: Minimize hibernation image size
+  become: yes
+  ansible.builtin.copy:
+    dest: /etc/tmpfiles.d/hibernation_image_size.conf
+    src: hibernation_image_size.conf
