refactor(hibernation): swap file size in inventory

--- a/ansible/inventory/tpx1cg10.yml
+++ b/ansible/inventory/tpx1cg10.yml
@@ -2,5 +2,8 @@ all:
   hosts:
     localhost:
       ansible_connection: local
-      host_specific_packages:
-        - sof-firmware
+      host_specific:
+        packages:
+          - sof-firmware
+        swapfile:
+          size: "20g"
