refactor(hibernation): split role to swap,systemd-boot,kernel

--- a/ansible/configure_user.yml
+++ b/ansible/configure_user.yml
@@ -29,3 +29,5 @@
     - name: "regenerate initramfs"
       become: yes
       ansible.builtin.command: mkinitcpio -P
+    - name: "update boot loader entries"
+      become: yes
