--- a/ansible/roles/systemd-boot/vars/main.yml
+++ b/ansible/roles/systemd-boot/vars/main.yml
@@ -1,3 +1,7 @@
 ---
 # https://wiki.archlinux.org/title/VirtualBox#Freeze_during_virtual_machine_startup_with_11th_generation_Intel_CPU_and_later
 disable_ibt: "{{ has_intel_cpu and intel_cpu_gen | int >= 11 }}"
+
+has_resume_params: "{{ features.hibernation | default(false) }}"
+resume_uuid: "{{ swap_file_uuid | default(omit)}}"
+resume_offset: "{{ swap_file_offset | default(omit)}}"
