feat(packages): add gimp

--- a/ansible/group_vars/all/main.yml
+++ b/ansible/group_vars/all/main.yml
@@ -53,6 +53,7 @@ packages:
     - wireplumber # declared here to avoid installing pipewire-media-session
     - youtube-dl
     - task # taskwarrior
+    - gimp
   headless:
     - alacritty
     - nnn
