--- a/ansible/roles/facts/tasks/device_uuids.yml
+++ b/ansible/roles/facts/tasks/device_uuids.yml
@@ -1,7 +1,7 @@
 ---
 - name: Gathering hardware facts
   become: yes
-  setup:
+  ansible.builtin.setup:
     gather_subset:
       - "!all"
       - "!min"
