--- a/ansible/roles/packages/tasks/main.yml
+++ b/ansible/roles/packages/tasks/main.yml
@@ -14,4 +14,4 @@
   become: true
   community.general.pacman:
     pkg: "{{ host_specific.packages }}"
-  when: host_specific.packages | length > 0
+  when: host_specific is defined and host_specific.packages | length > 0
