--- a/ansible/roles/systemd-boot/vars/main.yml
+++ b/ansible/roles/systemd-boot/vars/main.yml
@@ -1,7 +1,6 @@
 ---
-# https://wiki.archlinux.org/title/VirtualBox#Freeze_during_virtual_machine_startup_with_11th_generation_Intel_CPU_and_later
-disable_ibt: "{{ has_intel_cpu and intel_cpu_gen | int >= 11 }}"
+disable_ibt: "{{ disable_ibt_required | default(false) }}"
 
-has_resume_params: "{{ features.hibernation | default(false) }}"
-resume_uuid: "{{ swap_file_uuid | default(omit)}}"
-resume_offset: "{{ swap_file_offset | default(omit)}}"
+resume_uuid: "{{ swap_file_uuid | default(undefined)}}"
+resume_offset: "{{ swap_file_offset | default(undefined)}}"
+has_resume_params: "{{ features.hibernation and resume_uuid is defined and resume_offset is defined | default(false) }}"
